<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_assets"
            android:icon="@drawable/ic_menu_asset"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_menu_employees"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_inventories"
            android:icon="@drawable/ic_menu_inventory"
            android:title="@string/menu_inventories" />
    </group>
</menu>