<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:gravity="center_horizontal"
    tools:context=".ui.assets.AddAssetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_asset_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/barcode">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/btn_scan_barcode"
            android:layout_width="@dimen/btn_width"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_qr_scan"
            android:contentDescription="@string/scan_barcode"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creation_date"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <Spinner
            android:id="@+id/spinner_employee"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.DropDownItem.Spinner"
            android:layout_height="@dimen/spinner_height"
            android:spinnerMode="dropdown"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            style="@android:style/Widget.Material.DropDownItem.Spinner"
            android:spinnerMode="dropdown" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_asset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_height"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_add_image"
        android:scaleType="fitCenter"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_asset"/>

</LinearLayout>