<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:gravity="center_horizontal"
    tools:context=".ui.locations.AddLocationFragment">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_height_large" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lat_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/long_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        android:layout_marginTop="@dimen/btn_margin" />

</LinearLayout>